GUI changes, added html pages for diff services, prod config changes

--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -13,6 +13,12 @@
                                     .margin-adjust {
                                         margin-left: 650px; /* Adjusts left margin to push content to the right */
                                     }
+
+                                    @media (max-width: 767px) {
+                                        .margin-adjust {
+                                            margin-left: 170px;
+                                        }
+                                    }
                                 </style>
 								<div class="hero-text margin-adjust">
 									<!-- <h6 class="animated fadeInDown">Consetetur Adipiscing</h6> -->
@@ -28,6 +34,21 @@
 		</div>
 	</section>
 	<!-- end banner -->
+
+    <section class="section-spacing">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-title text-center">
+						<h2><span>Bienvenidos a Namaste</span></h2>
+						<p>Donde el arte del masaje se fusiona con la pasión por el bienestar físico y mental de cada cliente. Permítanos llevarte en un recorrido a través de nuestra historia, donde cada palabra cuenta una etapa de transformación, superación y amor.</p>
+					</div>
+				</div>
+			</div>
+        </div>
+    </section>
+
+    <!-- end intro message -->
 	
 	<section class="section-spacing">
 		<div class="container">
