--- a/namaste/namaste_app/templates/services.html
+++ b/namaste/namaste_app/templates/services.html
@@ -36,9 +36,9 @@
 							<a href="{% url 'service' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Masaje Sueco</a></h3>
+							<h3><a href="{% url 'swedish-massage' %}">Masaje Sueco</a></h3>
 							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'swedish-massage' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -290,7 +290,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="appoinment-img text-md-right text-center wow fadeIn">
-						<img class="tilt-img" src="/static/img/appointment/1.png" alt="">
+						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
 					</div>
 				</div>
 			</div>			
