--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -253,7 +253,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="appoinment-img text-md-right text-center wow fadeIn">
-						<img class="tilt-img" src="/static/img/appointment/1.png" alt="">
+						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
 					</div>
 				</div>
 			</div>			
