--- a/namaste/namaste_app/templates/swedish_massage.html
+++ b/namaste/namaste_app/templates/swedish_massage.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %} {% block title %} - Contacto {% endblock %}
+{% extends "base.html" %} {% block title %} - Masaje Sueco {% endblock %}
 {% load widget_tweaks %}
 {% block content %}
-	
-	<section class="inner-page-banner" style="background-image:url(/static/img/namaste/contact_us_banner.jpg)">
+
+	<section class="inner-page-banner" style="background-image:url(/static/img/banner/services-banner.jpg)">
 		<div class="page-banner-caption">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<h1>Contactanos</h1>
+						<h1>Masaje Sueco</h1>
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
-							<li class="breadcrumb-item active">Contacto</li>
+							<li class="breadcrumb-item active">Masaje Sueco</li>
 						</ol>
 					</div>
 				</div>
@@ -23,97 +23,96 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
-					<div class="contact-info text-center wow fadeIn">
-						<i class="fa fa-phone-square"></i>
-						<h3>Make a Call</h3>
-						<p><a href="tel:+61383766284">+61 3 8376 6284</a><br><a href="tel:+61383766284">+61 3 8376 6284</a></p>
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="{% url 'swedish-massage' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="{% url 'swedish-massage' %}">Masaje Sueco</a></h3>
+							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
+							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
+						</div>
 					</div>
 				</div>
-				
-				<div class="col-md-4">
-					<div class="contact-info text-center wow fadeIn">
-						<i class="fa fa-envelope-open-o"></i>
-						<h3>Send a Mail</h3>
-						<p><a href="mailto:info@example.com">info@example.com</a><br><a href="mailto:info@example.com">info@example.com</a></p>
-					</div>
-				</div>
-				
-				<div class="col-md-4">
-					<div class="contact-info text-center wow fadeIn">
-						<i class="fa fa-map-marker"></i>
-						<h3>Find Us</h3>
-						<p>123 West Street, Melbourne <br>Victoria 3000 Australia</p>
-					</div>
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="col-md-12">
-					<div class="section-title text-center">
-						<h2><span>Have Any Question?</span></h2>
+				<div class="col-md-8">
+					<div class="service-details">
+						<h3>Duration: 1-2hr<br>$180</h3>
+						<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+						<p> Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic  typesetting.</p>
+						<h3>Effects</h3>
+						<ul>
+							<li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the.</li>
+							<li>Scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic  typesetting, remaining essentially unchanged.</li>
+							<li>Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley.</li>
+							<li>It has survived not only five centuries, but also the leap into electronic typesetting.</li>
+						</ul>
 					</div>
 				</div>
 			</div>
-			
-			<div class="row">
-				<div class="col-md-12 col-lg-8 offset-lg-2">
-					<form id="contactForm" class="contact-form wow fadeIn" data-toggle="validator" method="post">
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<input placeholder="First Name" id="fname" class="form-control" name="fname" type="text" required data-error="Please enter your first name">
-									<div class="help-block with-errors"></div>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<input placeholder="Last Name" id="lname" class="form-control" name="lname" type="text">
-								</div>
-							</div>
-						</div>
-						<div class="form-group">
-							<input placeholder="Email Address" id="email" class="form-control" name="email" type="email" required data-error="Please enter your valid email address"> 
-							<div class="help-block with-errors"></div>
-						</div>
-						
-						<div class="form-group">
-							<textarea placeholder="Your Comments" id="message" cols="20" rows="8" class="form-control" required data-error="Please enter your comments"></textarea>
-							<div class="help-block with-errors"></div>
-						</div>
-						<div class="text-center">
-							<input value="Send Message" name="submit" class="btn btn-primary" type="submit">
-							<div id="msgSubmit" class="hidden"></div>
-						</div>
-					</form>
-				</div>
-				
-			</div>
-			
 		</div>
 	</section>
-	<!-- end contact -->
+	<!-- end services -->
 	
 	<section class="section-spacing inverse-bg">
 		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-6">
-					<div class="appoinment-text wow fadeIn">
-						<h2>Make an Appointment?</h2>
-						<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos, In massa urna pellentesque habitant morbi tristique senectus.</p>
-						<p>Call us : 002-6666-8888 or fill out our online booking & equiry form and we’ll contact you.</p>
-						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Make Appointment</a>
+			<div class="row">
+				<div class="col-md-12">
+					<div class="section-title text-center">
+						<h2><span>You may also like</span></h2>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="appoinment-img text-md-right text-center wow fadeIn">
-						<img class="tilt-img" src="/static/img/namaste/calendar.jpg" alt="">
+			</div>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="service-single.html"><img src="/static/img/services/2.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="service-single.html">Stone Message</a></h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
+							<a href="service-single.html" class="btn btn-default">Read More</a>
+						</div>
 					</div>
 				</div>
-			</div>			
+				
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="service-single.html"><img src="/static/img/services/3.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="service-single.html">Body Message</a></h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
+							<a href="service-single.html" class="btn btn-default">Read More</a>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-4">
+					<div class="service-item wow fadeIn">
+						<div class="thumb">
+							<a href="service-single.html"><img src="/static/img/services/5.jpg" alt=""></a>
+						</div>
+						<div class="service-info text-center">
+							<h3><a href="service-single.html">Aromatherapy</a></h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy.</p>
+							<a href="service-single.html" class="btn btn-default">Read More</a>
+						</div>
+					</div>
+				</div>
+				
+			</div>
+			
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<a href="{% url 'contact' %}" class="btn btn-primary">Contact us</a>
+				</div>
+			</div>
 		</div>
 	</section>
-	<!-- end appointment -->
-
+	<!-- end services -->
+	
 	<!-- Appointment Modal -->
     <div class="modal fade modal-vcenter" id="appointment" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
@@ -227,7 +226,9 @@
 							<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
 							<input value="Submit" name="submit" class="btn btn-primary" type="submit">
 						</div>
+						
 						<div id="msgSubmitRes" class="h3 text-center hidden"></div>
+						
 					</form>
                 </div>
             </div>
