GUI changes and completing swedish massage and post-op pages

--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -64,13 +64,13 @@
 						<a class="nav-link" href="{% url 'home' %}">HOME</a>					
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'about' %}">SOBRE NOSOTROS</a>					
+						<a class="nav-link" href="{% url 'sobre-nosotros' %}">SOBRE NOSOTROS</a>					
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'services' %}">SERVICIOS</a>					
+						<a class="nav-link" href="{% url 'servicios' %}">SERVICIOS</a>					
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{% url 'contact' %}">CONTACTO</a>					
+						<a class="nav-link" href="{% url 'contacto' %}">CONTACTO</a>					
 					</li>
 					<li class="nav-item btn-appointment">
 						<a class="nav-link" href="#" data-toggle="modal" data-target="#appointment">RESERVA TU CITA</a>					
@@ -100,9 +100,9 @@
 							<ul>
                                 
                                 <li><a href="#">Politica de Privacidad</a></li>
-								<li><a href="{% url 'about' %}">Sobre Nosotros</a></li>
-								<li><a href="{% url 'services' %}">Servicios</a></li>
-								<li><a href="{% url 'contact' %}">Contactanos</a></li>
+								<li><a href="{% url 'sobre-nosotros' %}">Sobre Nosotros</a></li>
+								<li><a href="{% url 'servicios' %}">Servicios</a></li>
+								<li><a href="{% url 'contacto' %}">Contactanos</a></li>
 							</ul>
 						</div>
 					</div>
