--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -24,7 +24,7 @@
 									<!-- <h6 class="animated fadeInDown">Consetetur Adipiscing</h6> -->
 									<h1 class="animated fadeInUp">NAMASTE</h1>
 									<!-- <p class="animated fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum tincidunt ullamcorper magna, in tincidunt ex auctor et.</p> -->
-									<a href="{% url 'contact' %}" class="btn btn-primary animated fadeInUp">RESERVA AHORA</a>
+									<a href="{% url 'contacto' %}" class="btn btn-primary animated fadeInUp">RESERVA AHORA</a>
 								</div>
 							</div>
 						</div>
@@ -64,12 +64,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Masaje Sueco</a></h3>
+							<h3><a href="{% url 'servicio' %}">Masaje Sueco</a></h3>
 							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -77,12 +77,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Post-Operatorio</a></h3>
+							<h3><a href="{% url 'servicio' %}">Post-Operatorio</a></h3>
 							<p>Experimenta el poder curativo de un masaje postoperatorio, diseñado para promover la recuperación después de una cirugía.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -90,19 +90,19 @@
                 <div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Masaje Prenatal</a></h3>
+							<h3><a href="{% url 'servicio' %}">Masaje Prenatal</a></h3>
 							<p>Disfruta de un masaje prenatal diseñado específicamente para mujeres embarazadas, que ofrece alivio y relajación durante esta etapa especial de la vida.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'services' %}" class="btn btn-primary">Mas Servicios</a>
+					<a href="{% url 'servicios' %}" class="btn btn-primary">Mas Servicios</a>
 				</div>
 			</div>
 		</div>
@@ -148,12 +148,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Depilación</a></h3>
+							<h3><a href="{% url 'servicio' %}">Depilación</a></h3>
 							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -161,12 +161,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Mesoterapia</a></h3>
+							<h3><a href="{% url 'servicio' %}">Mesoterapia</a></h3>
 							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -174,19 +174,19 @@
                 <div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'service' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'service' %}">Vacuslim</a></h3>
+							<h3><a href="{% url 'servicio' %}">Vacuslim</a></h3>
 							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
-							<a href="{% url 'service' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'services' %}" class="btn btn-primary">Mas Servicios</a>
+					<a href="{% url 'servicios' %}" class="btn btn-primary">Mas Servicios</a>
 				</div>
 			</div>
 		</div>
@@ -219,7 +219,7 @@
 								<li>Manicure</li>
 							</ul>
 							<h2><sub>$</sub>29.00</h2>
-							<a href="{% url 'contact' %}" class="btn btn-default">Contact Us</a>
+							<a href="{% url 'contacto' %}" class="btn btn-default">Contact Us</a>
 						</div>
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 								<li>Manicure</li>
 							</ul>
 							<h2><sub>$</sub>39.00</h2>
-							<a href="{% url 'contact' %}" class="btn btn-default">Contact Us</a>
+							<a href="{% url 'contacto' %}" class="btn btn-default">Contact Us</a>
 						</div>
 					</div>
 				</div>
@@ -257,7 +257,7 @@
 								<li>Manicure</li>
 							</ul>
 							<h2><sub>$</sub>49.00</h2>
-							<a href="{% url 'contact' %}" class="btn btn-default">Contact Us</a>
+							<a href="{% url 'contacto' %}" class="btn btn-default">Contact Us</a>
 						</div>
 					</div>
 				</div>
