--- a/namaste/namaste_app/templates/about-us.html
+++ b/namaste/namaste_app/templates/about-us.html
@@ -233,7 +233,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contact' %}" class="btn btn-primary">Contat Us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact Us</a>
 				</div>
 			</div>
 		</div>
