--- a/namaste/namaste_app/templates/service-single.html
+++ b/namaste/namaste_app/templates/service-single.html
@@ -106,7 +106,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contact' %}" class="btn btn-primary">Contact us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact us</a>
 				</div>
 			</div>
 		</div>
