--- a/namaste/namaste_app/templates/post_op.html
+++ b/namaste/namaste_app/templates/post_op.html
@@ -97,7 +97,7 @@
 						<div class="service-info text-center">
 							<h3><a href="{% url 'waxing' %}">Waxing</a></h3>
 							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
-							<a href="{% url 'waxing' %}" class="btn btn-default">Read More</a>
+							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -106,7 +106,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contactanos</a>
 				</div>
 			</div>
 		</div>
