--- a/namaste/namaste_app/templates/swedish_massage.html
+++ b/namaste/namaste_app/templates/swedish_massage.html
@@ -36,7 +36,7 @@
 				</div>
 				<div class="col-md-8">
 					<div class="service-details">
-						<h3>Duración: 1 hora<br>$65</h3>
+						<h3>Duración: 1 Hora<br>$65</h3>
 						<p>Nuestro servicio de masaje sueco está diseñado para aliviar el estrés, promover la relajación y mejorar la circulación. Experimenta la tranquilidad y el rejuvenecimiento con cada sesión, personalizada para atender tus necesidades específicas.</p>
 						<h3>Beneficios</h3>
 						<ul>
@@ -106,7 +106,7 @@
 			
 			<div class="row">
 				<div class="col-md-12 text-center">
-					<a href="{% url 'contacto' %}" class="btn btn-primary">Contact us</a>
+					<a href="{% url 'contacto' %}" class="btn btn-primary">Contactanos</a>
 				</div>
 			</div>
 		</div>
