--- a/namaste/namaste_app/templates/index.html
+++ b/namaste/namaste_app/templates/index.html
@@ -64,12 +64,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
+							<a href="{% url 'masaje-sueco' %}"><img src="/static/img/namaste/swiss_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Masaje Sueco</a></h3>
+							<h3><a href="{% url 'masaje-sueco' %}">Masaje Sueco</a></h3>
 							<p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'masaje-sueco' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -77,12 +77,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
+							<a href="{% url 'post-operatorio' %}"><img src="/static/img/namaste/post_surgical.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Post-Operatorio</a></h3>
+							<h3><a href="{% url 'post-operatorio' %}">Post-Operatorio</a></h3>
 							<p>Experimenta el poder curativo de un masaje postoperatorio, diseñado para promover la recuperación después de una cirugía.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'post-operatorio' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -90,12 +90,12 @@
                 <div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
+							<a href="{% url 'masaje-prenatal' %}"><img src="/static/img/namaste/prenatal_massage.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Masaje Prenatal</a></h3>
+							<h3><a href="{% url 'masaje-prenatal' %}">Masaje Prenatal</a></h3>
 							<p>Disfruta de un masaje prenatal diseñado específicamente para mujeres embarazadas, que ofrece alivio y relajación durante esta etapa especial de la vida.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'masaje-prenatal' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -148,12 +148,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
+							<a href="{% url 'waxing' %}"><img src="/static/img/namaste/waxing.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Depilación</a></h3>
+							<h3><a href="{% url 'waxing' %}">Waxing</a></h3>
 							<p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'waxing' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -161,12 +161,12 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
+							<a href="{% url 'mesoterapia' %}"><img src="/static/img/namaste/mesotherapy (1).jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Mesoterapia</a></h3>
+							<h3><a href="{% url 'mesoterapia' %}">Mesoterapia</a></h3>
 							<p>Con sesiones rápidas y sin dolor, nuestra mesoterapia no invasiva es perfecta para combatir la celulitis, mejorar la firmeza de la piel y rejuvenecer tu apariencia sin tiempo de inactividad.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'mesoterapia' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
@@ -174,12 +174,12 @@
                 <div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'servicio' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
+							<a href="{% url 'vacuslim' %}"><img src="/static/img/namaste/vacuslim.jpg" alt=""></a>
 						</div>
 						<div class="service-info text-center">
-							<h3><a href="{% url 'servicio' %}">Vacuslim</a></h3>
+							<h3><a href="{% url 'vacuslim' %}">Vacuslim</a></h3>
 							<p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
-							<a href="{% url 'servicio' %}" class="btn btn-default">Leer Mas</a>
+							<a href="{% url 'vacuslim' %}" class="btn btn-default">Leer Mas</a>
 						</div>
 					</div>
 				</div>
